@@ -1,5 +1,9 @@
 2021-02-08  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/kernel/Kernel.java:
+	Implement @RestController, ApplicationContextAware, and
+	ApplicationRunner (the last to parse command line arguments).
+
 	* src/main/java/galyleo/server/Message.java:
 	Use JsonNode.toPrettyString() to implement toString().
 
